fix immutable grouplist/sort